test/corpus/instructions.txt
==========
Combine instruction -- One arg
==========
replace tex0
---
(program
	(instr
		(combineinstr
			(combinefunc)
			(tevsrc (texture)))))

==========
Combine instruction -- Two args
==========
add tex0, constant
---
(program
	(instr
		(combineinstr
			(combinefunc)
			(tevsrc (texture))
			(tevsrc (gpu_input)))))

==========
Combine instruction -- Three args
==========
interpolate tex0, constant, tex3
---
(program
	(instr
		(combineinstr
			(combinefunc)
			(tevsrc (texture))
			(tevsrc (gpu_input))
			(tevsrc (texture)))))

==========
Alpha test
==========
alphatest 0.5
---
(program
	(instr
		(selectorinstr
			(alphatest
				(number
					(float))))))

==========
Normal map
==========
normal tex3, bump
---
(program
	(instr
		(selectorinstr
			(normal
				(texture)
				(normalselector)))))

==========
Buffer write mask
==========
write color
---
(program
	(instr
		(selectorinstr
			(write
				(writemask)))))

==========
Depth test
==========
depthtest greater
---
(program
	(instr
		(selectorinstr
			(depthtest
				(testfunc)))))
