test/corpus/pica.txt
==========
Vertex shader include
==========
.vsh vshader
---
(program
	(section
	    (picainclude
	    	(identifier))))

==========
Geometry shader include
==========
.gsh vshader
---
(program
	(section
	    (picainclude
	    	(identifier))))

==========
Inline vertex shader code
==========
.vsh {
  text

}
---
(program
	(section
	    (picainclude
			(picablock
	    		(picaasm)))))

==========
Inline geometry shader code
==========
.gsh {
.proc main
	mov r0.xyz, innrm
	mov r0.w,   zeros
	dp4 r1.x,   modelView[0], r0
	dp4 r1.y,   modelView[1], r0
	dp4 r1.z,   modelView[2], r0
	mov r1.w,   zeros
	dp3 r2,     r1, r1 ; r2 = x^2+y^2+z^2 for each component
	rsq r2,     r2     ; r2 = 1/sqrt(r2)  ''
	mul r1,     r2, r1 ; r1 = r1*r2
}
---
(program
	(section
	    (picainclude
			(picablock
	    		(picaasm)))))